[gd_scene load_steps=2 format=3 uid="uid://ckgmv8uvplmbj"]

[ext_resource type="Script" uid="uid://bsismp31f7jv1" path="res://scenes/test_scene.gd" id="1_g7g4h"]

[node name="TestScene" type="Node3D"]
transform = Transform3D(0.96263, 0.270819, 0, -0.0287454, 0.102176, -0.994351, -0.269289, 0.957192, 0.106143, 0, 0, 0)
script = ExtResource("1_g7g4h")

[node name="RayCast3D1" type="RayCast3D" parent="."]
target_position = Vector3(-10, -10, 0)

[node name="RayCast3D2" type="RayCast3D" parent="."]
target_position = Vector3(2, 5, -2)

[node name="RayCast3D3" type="RayCast3D" parent="."]
transform = Transform3D(-0.839072, 0.295959, -0.456473, 0, -0.839072, -0.544021, -0.544021, -0.456473, 0.704041, 0, 0, 0)
target_position = Vector3(-10, -10, 0)

[node name="RayCast3D" type="RayCast3D" parent="."]
